--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
           <div class="col-md-2">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="devicon-django-plain"></i></span>
+                <span class="ico-circle"><i class="fab fa-unity"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Django</h2>
+                <h2 class="s-title">UnitY</h2>
               </div>
             </div>
           </div>
@@ -612,7 +612,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                      <form action="forms/mail_handler.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
