--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <link href="assets/img/title.PNG" rel= "icon">
+  <link rel="icon" href="assets/img/title.PNG" type="image/icon type">
 <!--   <link href="assets/img/favicon.png" rel="icon">
 <!--   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> --> -->
 
