--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
     </div><!-- End Testimonials Section -->
 
     <!-- ======= Education Section ======= -->
-    <section id= "education">
+    <section id= "education" class= "sect-pt4">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
