--- a/index.html
+++ b/index.html
@@ -512,12 +512,12 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/Profile.jpg" height="200" width="200" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Fun Fact</span>
+                      <img src="assets/img/Profile2.PNG" height="200" width="auto" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">TANMAY KHULE</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        I am the Chandler
+                        CODER / DEVELOPER / GAMER
                       </p>
                     </div>
                   </div>
